Fixed portrait alignment

--- a/CSS/characterStyles.css
+++ b/CSS/characterStyles.css
@@ -436,7 +436,7 @@
 }
 
 .nameInfoPos{
-	height:175px;
+	height:200px;
 	width:300px;
 	left: calc(50% - 150px);
 	top: 60px;
